--- a/Languages/Japanese/DefInjected/Rimatomics.RimatomicResearchDef/Rimatomics_Projects.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.RimatomicResearchDef/Rimatomics_Projects.xml
@@ -2,14 +2,14 @@
 <LanguageData>
 
   <Geigercounter.ResearchLabel>放射線測定器</Geigercounter.ResearchLabel>
-  <Geigercounter.ResearchDesc>入植者を電離放射線の暴露から守るのはもちろん大切です。そのためにはまず、放射線の存在の確認できる放射線測定器が欠かせません。リムアトミクス設計の携帯型放射線測定器は電離放射線を検知する際に空間線量率をカリカリと音を鳴らし、数値を大きく表示します。この研究が終われば、入植者は全員、自動的に放射線測定器を持つようになります。</Geigercounter.ResearchDesc>
+  <Geigercounter.ResearchDesc>入植者を電離放射線の暴露から守るのはもちろん大切です。そのためにはまず、放射線の存在を確認できる放射線測定器が欠かせません。リムアトミクス設計の携帯型放射線測定器は電離放射線を検知する際に空間線量率をカリカリと音を鳴らし、数値を大きく表示します。この研究が終われば、入植者は全員、自動的に放射線測定器を持つようになります。</Geigercounter.ResearchDesc>
   <Geigercounter.ResearchDescDisc>すべての入植者は放射線測定器を備えています。電離放射線の遭遇する際、その空間線量率はカリカリとした音と表示された数値で測定できます。</Geigercounter.ResearchDescDisc>
 
 
   <!-- /////////////// -->
 
   <RadSuits.ResearchLabel>放射線防護服</RadSuits.ResearchLabel>
-  <RadSuits.ResearchDesc>リムアトミクス設計の放射線防護服は遮蔽機能のライニングがあるが、もっとも大切な機能は放射性物質や毒が体についたり吸い込んだりすることを防ぐことです。</RadSuits.ResearchDesc>
+  <RadSuits.ResearchDesc>リムアトミクス設計の放射線防護服は遮蔽機能のライニングを持っているが、もっとも大切な機能は放射性物質や毒が体についたり吸い込んだりすることを防ぐことです。</RadSuits.ResearchDesc>
   <RadSuits.ResearchDescDisc>ミシン台で全種類の放射線防護服を作れます。</RadSuits.ResearchDescDisc>
 
   <NuclearResearch.ResearchLabel>原子力の研究施設</NuclearResearch.ResearchLabel>
@@ -40,37 +40,37 @@
   <ICBM.ResearchDescDisc>大量破壊兵器を貯蔵できます。</ICBM.ResearchDescDisc>
 
   <EnergyWeapons.ResearchLabel>エネルギー兵器</EnergyWeapons.ResearchLabel>
-  <EnergyWeapons.ResearchDesc>ハイ・エネルギー防衛技術の未来はリムアトミクスの手で作られ、リムアトミクスの手で共有されています！弊社の実績ある目標捕捉システムと最先端、そしてスケーラブルでモジュール式のエネルギー兵器は360度範囲を誇り、さまざまな目標の補足と迎撃が可能です。</EnergyWeapons.ResearchDesc>
+  <EnergyWeapons.ResearchDesc>ハイ・エネルギー防衛技術の未来はリムアトミクスの手で作られ、リムアトミクスの貿易船で銀河に広がっています！弊社の実績ある目標捕捉システムと最先端、モジュール式でスケーラブルなエネルギー兵器は360度範囲を誇り、さまざまな目標の補足と迎撃が可能です。</EnergyWeapons.ResearchDesc>
   <EnergyWeapons.ResearchDescDisc>リムアトミクス設計のエネルギー兵器の動作に必要なシステムが揃っています。研究台にて、兵器技術の購入が可能です。</EnergyWeapons.ResearchDescDisc>
 
 
   <!-- ADS -->
 
-  <ADS.ResearchDesc>アクティブ・ディナイアル・システムとは非致死性指向性エネルギー兵器です。領域拒否、外周警備、そして群衆整理のために使えます。この兵器が発射するミリ波の電磁波を浴びる対象は皮膚の灼熱感により一時敗走させられる。充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</ADS.ResearchDesc>
+  <ADS.ResearchDesc>アクティブ・ディナイアル・システムとは非致死性指向性エネルギー兵器です。領域拒否、外周警備、そして群衆整理のために使えます。この兵器が発射するミリ波の電磁波を浴びる対象は皮膚の灼熱感により一時敗走させられる。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</ADS.ResearchDesc>
   <ADS.ResearchDescDisc>ADSを自由に建てられます。既存のADSは最大出力で稼働しています。</ADS.ResearchDescDisc>
 
 
   <!-- Tesla Coil -->
 
   <TeslaCoil.ResearchLabel>テスラコイル</TeslaCoil.ResearchLabel>
-  <TeslaCoil.ResearchDesc>短距離内の対象に向けて強力な放電を放てるテスラコイルの技術は素朴ですが、非常に効果的な兵器です。充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</TeslaCoil.ResearchDesc>
+  <TeslaCoil.ResearchDesc>短距離内の対象に向けて強力な放電を放てるテスラコイルの技術は素朴ですが、非常に効果的な兵器です。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</TeslaCoil.ResearchDesc>
   <TeslaCoil.ResearchDescDisc>テスラコイルを自由に建てられます。既存のテスラコイルは最大出力で稼働しています。</TeslaCoil.ResearchDescDisc>
 
 
   <!-- HEL -->
 
-  <HEL.ResearchDesc>ハイ・エネルギー・レーザーは固体レーザーの形の指向性エネルギーで飛翔体を迎撃できます。アップグレードされたHELは大きなロケットも迎撃できます。充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</HEL.ResearchDesc>
+  <HEL.ResearchDesc>ハイ・エネルギー・レーザーは固体レーザーの形の指向性エネルギーで飛翔体を迎撃できます。アップグレードされたHELは大きなロケットも迎撃できます。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</HEL.ResearchDesc>
   <HEL.ResearchDescDisc>HELを自由に建てられます。既存のHELは最大出力で稼働しています。</HEL.ResearchDescDisc>
 
 
   <!-- /////////////////////////////////////////////////////// -->
 
   <Railgun.ResearchLabel>レールガン</Railgun.ResearchLabel>
-  <Railgun.ResearchDesc>レールガンは電磁誘導により弾帯を加速して超遠距離の目標を攻撃できます。25弾を持つマガジンからサボット弾を撃ちます。充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</Railgun.ResearchDesc>
+  <Railgun.ResearchDesc>レールガンは電磁誘導により弾帯を加速して超遠距離の目標を攻撃できます。25弾を持つマガジンからサボット弾を撃ちます。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</Railgun.ResearchDesc>
   <Railgun.ResearchDescDisc>レールガンを自由に建てられます。既存のレールガンは最大出力で稼働しています。</Railgun.ResearchDescDisc>
 
   <Obelisk.ResearchLabel>オベリスク</Obelisk.ResearchLabel>
-  <Obelisk.ResearchDesc>オベリスクは集束固体レーザーで目標を焼き尽します。電力の負担は大きいですが、遠距離でも完璧な命中率と圧倒的な威力を誇ります。射程距離と出力の調整の実装も予定されています。充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</Obelisk.ResearchDesc>
+  <Obelisk.ResearchDesc>オベリスクは集束固体レーザーで目標を焼き尽します。電力の負担は大きいですが、遠距離でも完璧な命中率と圧倒的な威力を誇ります。射程距離と出力の調整の実装も予定されています。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</Obelisk.ResearchDesc>
   <Obelisk.ResearchDescDisc>オベリスクを自由に建てられます。既存のオベリスクは最大出力で稼働しています。</Obelisk.ResearchDescDisc>
 
 
