--- a/Languages/Japanese/DefInjected/ThingDef/Buildings_C_Power.xml
+++ b/Languages/Japanese/DefInjected/ThingDef/Buildings_C_Power.xml
@@ -14,7 +14,7 @@
   <ReactorCoreA.description>リムアトミクス設計の炉心で入門機。21本の燃料棒の容量を持ち、最大出力は250kw。炉心自体の役割は、制御された核分裂連鎖反応を維持し、熱を発電するタービンに提供することである。</ReactorCoreA.description>
 
   <ReactorCoreB.label>原子炉 (X型)</ReactorCoreB.label>
-  <ReactorCoreB.description>高度な増殖炉で、消費する燃料より大きな量の核物質を作ることができる。</ReactorCoreB.description>
+  <ReactorCoreB.description>高度な増殖炉で、消費する燃料より大きな量の核物質を作ることが\nできる。</ReactorCoreB.description>
 
   <ReactorCoreC.label>原子炉 (V型)</ReactorCoreC.label>
   <ReactorCoreC.description>高度かつ巨大な増殖炉で、消費する燃料より大きな量の核物質を作ることができる。</ReactorCoreC.description>
@@ -23,13 +23,13 @@
   <!-- COOLING -->
 
   <CoolingRadiator.label>ラジエーター</CoolingRadiator.label>
-  <CoolingRadiator.description>原子炉をわずかに冷やしながらコロニー全体の熱源として使える装置。</CoolingRadiator.description>
+  <CoolingRadiator.description>原子炉をわずかに冷やしながらコロニー全体の熱源として使える\n装置。</CoolingRadiator.description>
 
   <CoolingWater.label>水冷ポンプ</CoolingWater.label>
   <CoolingWater.description>湖、川、または海の冷水を利用して抜群の冷却効果を発揮できる装置。</CoolingWater.description>
 
   <CoolingTower.label>冷却塔</CoolingTower.label>
-  <CoolingTower.description>強制通風冷却塔は水域がなくても空気で抜群の冷却効果を発揮できる。</CoolingTower.description>
+  <CoolingTower.description>強制通風冷却塔は水域がなくても空気で抜群の冷却効果を\n発揮できる。</CoolingTower.description>
 
 
   <!-- HEAT EXCHANGE -->
@@ -44,7 +44,7 @@
   <!-- TRANNY -->
 
   <Transformer.label>変圧器</Transformer.label>
-  <Transformer.description>タービン発電機の出力を一般の電気ケーブルが発信できる電圧まで下げる装置。</Transformer.description>
+  <Transformer.description>タービン発電機の出力を一般の電気ケーブルが発信できる電圧まで\n下げる装置。</Transformer.description>
 
 
   <!-- CONTROLLERS -->
