Updates to ttext for visual improvement

--- a/Languages/Japanese/DefInjected/DesignationCategoryDef/DesignationCategories.xml
+++ b/Languages/Japanese/DefInjected/DesignationCategoryDef/DesignationCategories.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Rimatomics.label>リムアトミクス</Rimatomics.label>
+  <Rimatomics.label>ﾘﾑｱﾄﾐｸｽ</Rimatomics.label>
   <Rimatomics.description>リムアトミクスで追加されたあらゆる建造物</Rimatomics.description>
 
 
