--- a/Languages/Japanese/DefInjected/ResearchTabDef/ResearchTabs.xml
+++ b/Languages/Japanese/DefInjected/ResearchTabDef/ResearchTabs.xml
@@ -3,6 +3,6 @@
 
   <!-- To add a research tab, make a new ResearchTabDef here and then set the <tab> field of your research project to match it -->
 
-  <Rimatomics.label>リムアトミクス</Rimatomics.label>
+  <Rimatomics.label>ﾘﾑｱﾄﾐｸｽ</Rimatomics.label>
 
 </LanguageData>
